--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -10,7 +10,9 @@ WORKDIR /app
 
 RUN apk add --no-cache git && \
     npm install -g pnpm && \
-    git clone --force -b ${GIT_TAG} --depth 1 https://github.com/zyachel/quetre.git . && \
+    git clone -b ${GIT_TAG} --depth 1 https://github.com/zyachel/quetre.git && \
+    mv quetre/* . && \
+    rm -r quetre && \
     cp .env.example .env && \
     pnpm install --prod && \
     chown -R 1000:1000 /app
